--- a/Optuna.ipynb
+++ b/Optuna.ipynb
@@ -128,6 +128,24 @@
     "\n",
     "    return results['test Accuracy'].iloc[-1]  # A objective value linked with the Trial object."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "study = optuna.create_study(direction='maximize')\n",
+    "study.optimize(objective, n_trials=10) #Normally we would do more like 50-100 trials,\n",
+    "#but we are doing less to make sure this notebook runs in a reasonable amount of time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
