--- a/Optuna.ipynb
+++ b/Optuna.ipynb
@@ -145,7 +145,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(study.best_params) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = optuna.visualization.plot_optimization_history(study)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = optuna.visualization.plot_slice(study)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "fig = optuna.visualization.plot_contour(study, params=['neurons_per_layer', 'hidden_layers', \"learning_rate\"])\n",
+    "fig.show()"
+   ]
   }
  ],
  "metadata": {
