Making the tuning prunable with optuna

--- a/Optuna.ipynb
+++ b/Optuna.ipynb
@@ -179,6 +179,86 @@
     "fig = optuna.visualization.plot_contour(study, params=['neurons_per_layer', 'hidden_layers', \"learning_rate\"])\n",
     "fig.show()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prunable studies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def objectivePrunable(trial):\n",
+    "    \n",
+    "    train_subset = int(len(train_data)*0.8)\n",
+    "    test_subset = len(train_data)-train_subset\n",
+    "    \n",
+    "    split = torch.utils.data.random_split(train_data, [train_subset, test_subset])\n",
+    "    \n",
+    "    t_loader = DataLoader(split[0], batch_size=B, shuffle=True)\n",
+    "    v_loader = DataLoader(split[1], batch_size=B, shuffle=False)\n",
+    "\n",
+    "    #Hidden layer size\n",
+    "    n = trial.suggest_int('neurons_per_layer', 1, 256) \n",
+    "    layers = trial.suggest_int('hidden_layers', 1, 6) \n",
+    "    #How many channels are in the input?\n",
+    "    C = 1\n",
+    "    #How many classes are there?\n",
+    "    classes = 10\n",
+    "\n",
+    "    #At least one hidden layer, that take in D inputs\n",
+    "    sequential_layers = [\n",
+    "        Flatten(),\n",
+    "        nn.Linear(D,  n),\n",
+    "        nn.Tanh(),\n",
+    "    ]\n",
+    "    \n",
+    "    for _ in range(layers-1):\n",
+    "        sequential_layers.append( nn.Linear(n,  n) )\n",
+    "        sequential_layers.append( nn.Tanh() )\n",
+    "    \n",
+    "    #Output layer\n",
+    "    sequential_layers.append( nn.Linear(n, classes) )\n",
+    "    \n",
+    "\n",
+    "    fc_model = nn.Sequential(*sequential_layers)\n",
+    "    \n",
+    "    eta_global = trial.suggest_loguniform('learning_rate', 1e-6, 1e+2)\n",
+    "\n",
+    "    #We need to create the optimizer (and any learning rate schedule) outside of the train_network call so that the same optimizer is re-used between epochs\n",
+    "    optimizer = torch.optim.AdamW(fc_model.parameters(), lr=eta_global)\n",
+    "    scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, epochs//3)\n",
+    "    \n",
+    "    for epoch in range(10):\n",
+    "    \n",
+    "        results = train_network(fc_model, loss_func, t_loader, val_loader=v_loader,\n",
+    "                                         epochs=1, optimizer=optimizer, lr_schedule=scheduler,\n",
+    "                                         score_funcs={'Accuracy': accuracy_score}, device=device, \n",
+    "                                         disable_tqdm=True)\n",
+    "        cur_accuracy = results['val Accuracy'].iloc[-1]\n",
+    "        trial.report(cur_accuracy, epoch)\n",
+    "        \n",
+    "        if trial.should_prune():\n",
+    "            raise optuna.exceptions.TrialPruned()\n",
+    "\n",
+    "    return cur_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "study2 = optuna.create_study(direction='maximize')\n",
+    "study2.optimize(objectivePrunable, n_trials=20)"
+   ]
   }
  ],
  "metadata": {
