--- a/Optuna.ipynb
+++ b/Optuna.ipynb
@@ -259,6 +259,16 @@
     "study2 = optuna.create_study(direction='maximize')\n",
     "study2.optimize(objectivePrunable, n_trials=20)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = optuna.visualization.plot_intermediate_values(study2)\n",
+    "fig.show()"
+   ]
   }
  ],
  "metadata": {
