--- a/DesigningBlocks.ipynb
+++ b/DesigningBlocks.ipynb
@@ -858,6 +858,141 @@
     "sns.lineplot(x='epoch', y='test Accuracy', data=cnn_results, \n",
     "    label='CNN')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LeakyReLU for vanishing gradients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "leak_rate = 0.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fc_relu_model = nn.Sequential( \n",
+    "    nn.Flatten(), \n",
+    "    nn.Linear(D, n), nn.LeakyReLU(leak_rate), \n",
+    "    *[nn.Sequential(nn.Linear(n, n), nn.LeakyReLU(leak_rate)) for _ in range(5)], \n",
+    "    nn.Linear(n, classes), \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cnnLayer(in_filters, out_filters=None, kernel_size=3):\n",
+    "    \"\"\"\n",
+    "    in_filters: how many channels are coming into the layer\n",
+    "    out_filters: how many channels this layer should learn / output, or `None` if we want to have the same number of channels as the input.\n",
+    "    kernel_size: how large the kernel should be\n",
+    "    \"\"\"\n",
+    "    if out_filters is None:\n",
+    "        out_filters = in_filters #This is a common pattern, so lets automate it as a default if not asked\n",
+    "    padding=kernel_size//2 #padding to stay the same size\n",
+    "    return nn.Sequential( # Combine the layer and activation into a single unit\n",
+    "        nn.Conv2d(in_filters, out_filters, kernel_size, padding=padding), \n",
+    "        nn.LeakyReLU(leak_rate)\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_relu_model = nn.Sequential( \n",
+    "    cnnLayer(C, n_filters), cnnLayer(n_filters), cnnLayer(n_filters), \n",
+    "    nn.MaxPool2d((2,2)), \n",
+    "    cnnLayer(n_filters, 2*n_filters), \n",
+    "    cnnLayer(2*n_filters), \n",
+    "    cnnLayer(2*n_filters), \n",
+    "    nn.MaxPool2d((2,2)), \n",
+    "    cnnLayer(2*n_filters, 4*n_filters), cnnLayer(4*n_filters), \n",
+    "    nn.Flatten(), \n",
+    "    nn.Linear(D*n_filters//4, classes), \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "575b0ad112b641e7bfc891157b8961e5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch:   0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4a1ab0f602994dda9b6a39360321c683",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fc_relu_results = idlmam.train_network(fc_relu_model, loss_func, train_loader, test_loader=test_loader, epochs=10, score_funcs={'Accuracy': accuracy_score}, device=device)\n",
+    "del fc_relu_model\n",
+    "cnn_relu_results = idlmam.train_network(cnn_relu_model, loss_func, train_loader, test_loader=test_loader, epochs=10, score_funcs={'Accuracy': accuracy_score}, device=device)\n",
+    "del cnn_relu_model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.lineplot(x='epoch', y='test Accuracy', data=fc_results, \n",
+    "    label='Fully Connected') \n",
+    "sns.lineplot(x='epoch', y='test Accuracy', data=cnn_results, \n",
+    "    label='CNN')\n",
+    "sns.lineplot(x='epoch', y='test Accuracy', data=fc_relu_results, \n",
+    "    label='Fully Connected (ReLU)') \n",
+    "sns.lineplot(x='epoch', y='test Accuracy', data=cnn_relu_results, \n",
+    "    label='CNN (ReLU)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
