Leaky ReLU did the best scores. Trying normalization techniques

--- a/DesigningBlocks.ipynb
+++ b/DesigningBlocks.ipynb
@@ -962,6 +962,454 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b96356a7c0a04e62973e728826b34b70",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fddc5225c8ca47df9a103ccc35cdfd1f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "656e76d520414542912bf24f87a354d7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "36871a7108f3453f817aee5ea05400b2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "78665dcb6e7e4ba3aa1d497fbcbaaf34",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aad104eff21a40b99c5120a7c356e156",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c4cdcbe681594f6ea51c51e93ac9e2e0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bee349dec5bb438eabe2d6b9dbadfbd2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9f6f6129e7b3446091ff85d750a86d4c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "853505116b28424f8d11cb32592a6b0b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "67996de343d749a6a3884c9283dd0265",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ec989cbdc4b24f909e1c68373cbebdd5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b5319d571f4845d78464f60abc146b0d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "81fbf459213d45a18e45772d2d012dcb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c0a53928160245409acbb42a4d958337",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd04ea5021f14027b2889a9413862e17",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "432e4a5fa5d04613af7e4f526f8b46ec",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "21248ae4049d452b9a7ddc4c95afaa91",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "de6f5a8d4280430f92f7d51f61514bb5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1cf4aae138d8422fb76e5f93fa490c93",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch:   0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3d215dc9edb14d09b38b50e342ab7312",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9bb5de15dcf4400aa7e27d40749f46c8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c54d9664ed8c42aaaad2031788cb391f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "45ecaaecb15b48b1a0d49a21cb0b9ced",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1a70494ab4b64b31a748caa6361fe56c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a7234756c90746cb8dcae10fe8f6b84d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "36184905cc2b4089877952adae17704f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1d73c077222f49b083579206b7f5b990",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "78327e40a8684e349ccc0d2293a04436",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "88d7ad7cd66844bea26ce07ec4ed49ce",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bc9f71d7730f4bd9a6f53f2f3696a4b6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "96b087a48ba54ae8b9d33395c2917837",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing:   0%|          | 0/469 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -985,6 +1433,88 @@
     "    label='Fully Connected (ReLU)') \n",
     "sns.lineplot(x='epoch', y='test Accuracy', data=cnn_relu_results, \n",
     "    label='CNN (ReLU)')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Batch Normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fc_bn_model = nn.Sequential(\n",
+    "    nn.Flatten(),\n",
+    "    nn.Linear(D,  n), nn.BatchNorm1d(n), nn.LeakyReLU(leak_rate),\n",
+    "    *[nn.Sequential(nn.Linear(n,  n), nn.BatchNorm1d(n), nn.LeakyReLU(leak_rate)) for _ in range(5)], \n",
+    "    nn.Linear(n, classes),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Changing the CnnLayer to use BatchNorm\n",
+    "\n",
+    "def cnnLayer(in_filters, out_filters=None, kernel_size=3):\n",
+    "    if out_filters is None:\n",
+    "        out_filters = in_filters #This is a common pattern, so lets automate it as a default if not asked\n",
+    "    padding=kernel_size//2 #padding to stay the same size\n",
+    "    return nn.Sequential( # Combine the layer and activation into a single unit\n",
+    "        nn.Conv2d(in_filters, out_filters, kernel_size, padding=padding), \n",
+    "        nn.BatchNorm2d(out_filters), #The only change, adding BatchNorm2d after our convolution! \n",
+    "        nn.LeakyReLU(leak_rate)\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_bn_model = nn.Sequential(\n",
+    "    cnnLayer(C, n_filters), cnnLayer(n_filters), cnnLayer(n_filters),\n",
+    "    nn.MaxPool2d((2,2)),\n",
+    "    cnnLayer(n_filters, 2*n_filters), cnnLayer(2*n_filters), cnnLayer(2*n_filters), \n",
+    "    nn.MaxPool2d((2,2)),\n",
+    "    cnnLayer(2*n_filters, 4*n_filters), cnnLayer(4*n_filters),\n",
+    "    nn.Flatten(),\n",
+    "    nn.Linear(D*n_filters//4, classes),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fc_bn_results = idlmam.train_network(fc_bn_model, loss_func, train_loader, test_loader=test_loader, epochs=10, score_funcs={'Accuracy': accuracy_score}, device=device)\n",
+    "del fc_bn_model\n",
+    "cnn_bn_results = idlmam.train_network(cnn_bn_model, loss_func, train_loader, test_loader=test_loader, epochs=10, score_funcs={'Accuracy': accuracy_score}, device=device)\n",
+    "del cnn_bn_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.lineplot(x='epoch', y='test Accuracy', data=fc_relu_results, label='FC-ReLU')\n",
+    "sns.lineplot(x='epoch', y='test Accuracy', data=fc_bn_results, label='FC-ReLU-BN')\n",
+    "sns.lineplot(x='epoch', y='test Accuracy', data=cnn_relu_results, label='CNN-ReLU')\n",
+    "sns.lineplot(x='epoch', y='test Accuracy', data=cnn_bn_results, label='CNN-ReLU-BN')"
    ]
   },
   {
